--- a/documentation.adoc
+++ b/documentation.adoc
@@ -12,8 +12,9 @@ package lockers.
 There are three sites:
 
 Headquarters:: This location is where the company handles acounting and development.
-Office:: This location offers in person customer service and package pick up.
-Package Center:: This location houses the packages and the company servers.
+Remote Package Storage:: This location is for long term package storage.
+Package Center:: This location houses the packages and the company servers, while also handling customer service
+and in person package pick up.
 
 <<<
 
@@ -121,12 +122,35 @@ jobs:
           tag_name: latest
           name: Latest Documentation
           files: documentation.pdf
-
 ----
+
+<<<
 
 == Network
 
+=== Topology
+
+.Remote Package Storage
+image::images/remote_package_storage.jpg[align="center"]
+
+.HQ
+image::images/hq.jpg[align="center"]
+
+.Package Center
+image::images/package_center.jpg[align="center"]
+
+<<<
+
 === Vlans
+
+[cols="^1,^1,^1""]
+.Remote Package Storage VLANs
+|===
+|Vlan ID | Name | Network Address
+|Vlan 310 | WORKERS | 192.168.10.0/23
+|Vlan 333 | MANAGEMENT | 10.255.0.0/26
+|Vlan 666 | TRASH | -------
+|===
 
 [cols="^1,^1,^1""]
 .HQ VLANs
@@ -137,8 +161,8 @@ jobs:
 |Vlan 120 | HR | 10.20.0.0/25
 |Vlan 130 | ACCOUNTING | 10.30.0.0/26
 |Vlan 140 | MARKETING | 10.40.0.0/26
-|Vlan 333 | MANAGEMENT | 10.255.0.0/27
-|Vlan 666 | THRASH | -------
+|Vlan 333 | MANAGEMENT | 10.255.0.0/26
+|Vlan 666 | TRASH | -------
 |===
 
 [cols="^1,^1,^1""]
@@ -148,32 +172,29 @@ jobs:
 
 |Vlan 210 | WORKERS | 172.16.10.0/23
 |Vlan 220 | SERVERS | 172.16.20.0/28
-|Vlan 333 | MANAGEMENT | 172.16.255.0/27
-|Vlan 666 | THRASH | -------
+|Vlan 230 | FRONT_DESK | 172.16.30.0/27
+|Vlan 240 | GUEST | 172.16.40.0/26
+|Vlan 333 | MANAGEMENT | 10.255.0.0/26
+|Vlan 666 | TRASH | -------
 |===
 
-[cols="^1,^1,^1""]
-.Office VLANs
-|===
-|Vlan ID | Name | Network Address
+- In this network design, we have implemented VLANs 
+to segment the network into different logical groups.
 
-|Vlan 310 | CUSTOMER_SUPPORT | 192.168.10.0/25
-|Vlan 320 | GUEST | 192.168.20.0/26
-|Vlan 330 | FRONT_DESK | 192.168.30.0/27
-|Vlan 333 | MANAGEMENT | 192.168.255.0/27
-|Vlan 666 | THRASH | -------
-|===
+- Each VLAN has its own unique network address range, 
+allowing for better organization and security.
 
-- In this network design, we have implemented VLANs to segment the network into different logical groups.
+- The VLANs are categorized based on their function. 
+We use Vlan 333 for management purposes across all sites, 
+and Vlan 666 is reserved for any unused ports for security reasons. 
+This design helps to improve network performance and security 
+by isolating different types of traffic and reducing broadcast domains.
 
-- Each VLAN has its own unique network address range, allowing for better organization and security.
+- The vlan ids are following the network address 
+numbering scheme for easier identification.
 
-- The VLANs are categorized based on their function. We use Vlan 333 for management purposes across all sites, and Vlan 666 is reserved for any unused ports for security reasons. This design helps to improve network performance and security by isolating different types of traffic and reducing broadcast domains.
-
-- The vlan ids are following the network address numbering scheme for easier identification.
-
-- The vlan ids are also following a pattern where the first digit represents the site (1 for HQ, 2 for Package Center, and 3 for Office) and the last two digits represent the specific function of the vlan. This makes it easier to identify the purpose of each vlan at a glance.
-
-
-
-
+- The vlan ids are also following a pattern where the first digit 
+represents the site (1 for HQ, 2 for Package Center, and 
+3 for Remote Package Storage) and the last two digits represent the 
+specific function of the vlan. This makes it easier to identify 
+the purpose of each vlan at a glance.
